--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@angular/youtube-player": "^12.2.4",
     "express": "^4.17.1",
     "ngx-owl-carousel-o": "^6.0.0",
     "ngx-toastr": "^14.1.0",
