--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~12.2.0",
     "@angular/youtube-player": "^12.2.4",
     "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
     "ngx-owl-carousel-o": "^6.0.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
