--- a/api/example.env
+++ b/api/example.env
@@ -1,8 +1,3 @@
-DB_HOST=localhost
-DB_USER= user db
-DB_PASS= password db
-EMAIL=
-EMAIL_PASS=
-API_URL=http://localhost:
-API_PORT=3333
-CLIENT_URL=http://localhost:3000
+DATABASE_URL=
+SHADOW_DATABASE_URL=
+API_PORT=
