--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/youtube-player": "^12.2.4",
+    "angular2-multiselect-dropdown": "^5.0.4",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
     "ngx-owl-carousel-o": "^6.0.0",
